--- a/packages.config
+++ b/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
   <package id="bootstrap" version="5.3.3" targetFramework="net48" />
+  <package id="FontAwesome" version="4.0.3" targetFramework="net48" />
+  <package id="FontAwesome.MVC" version="1.0.0" targetFramework="net48" />
   <package id="jQuery" version="3.7.1" targetFramework="net48" />
   <package id="jQuery.Validation" version="1.20.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.3.0" targetFramework="net48" />
@@ -17,5 +19,6 @@
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
